--- a/style.css
+++ b/style.css
@@ -1,28 +1,16 @@
 @charset "utf-8";
 /* CSS Document */
-* {
-    margin: 0;
-    padding: 0;
-}
-a {
-    text-decoration: none;
-    color: inherit;
-}
-li {
-    list-style: none
-}
-a:hover {
-    text-decoration: underline;
-}
 body {
-    padding: 0;
-    margin: 0;
-    font-size: 14px;
-    font-family: '微软雅黑'
-        /*	页面统一的外边距和内边距都为0，统一字体大小为14像素  */
+    padding: 0; /*	内边距*/
+    margin: 0; /*	外边距*/
+    font-size: 14px; /*	设置字号大小*/
+}
+a {}
+.hot_news a {
+    text-decoration: none;
 }
 .box {
-    /*	background-color: gold;*/
+    /*	background-color: gold;	*/
     width: 1140px;
     margin: 0 auto;
 }
@@ -33,208 +21,222 @@ body {
     float: right
 }
 .navbar {
-    width: 100%;
-    height: 50px;
     background-color: #007bff;
+    height: 50px;
+    width: 100%
 }
 .navbar a {
-    font-size: 16px;
     color: white;
+    font-size: 16px;
     text-decoration: none;
-    text-align: center;
     line-height: 50px;
-    display: block;
     width: 103px;
+    display: block;
+    text-align: center;
     float: left;
 }
-.news {}
-.news .col-title {
-    font-size: 30px;
-    font-weight: normal;
-    border-bottom: solid 1px #ccc;
-    padding-bottom: 15px;
-    margin-bottom: 15px;
+.navbar a:hover {
+    color: yellow
 }
-.news .col-title i {
-    font-size: 22px;
-    color: #666;
-    font-style: normal
+.nb {
+    color: #777
 }
-.news h3 {
-    color: royalblue;
-}
-.img_news {
-    width: 40%;
-    /*	background-color: brown*/
-}
-.img_news img {
-    width: 100%;
-}
-.newsbox {
-    width: 60%;
-    padding: 0 10px;
-    box-sizing: border-box;
-}
-.img_news h3 {
-    font-size: 20px;
+.nb h2 {
     font-weight: 500;
+    border-bottom: 1px solid #ccc;
+    font-size: 30px;
+    padding: 10px 0
+}
+.hot_news h3 {
+    color: crimson;
     text-align: center;
+    font-size: 28px;
     margin: 0;
 }
-.new-zd {
+.nb h2 span {
+    font-size: 20px;
+    color: #999;
+}
+.nb .l { /*    background-color: gold;*/ width: 40%;
+}
+.nb .l img {
     width: 100%;
-    height: 111px;
-    overflow: hidden;
-    border-bottom: 1px #5e5e5e dashed;
+    height: auto
 }
-.new-zd-bt {
-    font-size: 28px;
-    color: red;
-    text-align: center;
-    margin: 5px 0
+.nb .l h3 {
+    margin: 0;
 }
-.new-zd-wb {
-    padding: 0 5px;
-    color: #5E5E5E;
-    height: 40px;
-    overflow: hidden;
-}
-.new-pt {
-    width: 100%;
-    /*	height: 333px;*/
-}
-.new-pt .item {
-    width: 100%;
-    line-height: 30px;
-    margin: 5px 0;
-    display: block;
-    overflow: hidden;
-}
-.new-pt .item:hover {
+.nb .l h3 a {
+    color: #007bff;
+    font-size: 20px;
+    font-weight: 450;
     text-decoration: none;
-    color: #DB2519;
-}
-.new-pt .item p {
-    font-size: 1.1em;
-}
-.new-pt .item i {
-    padding-right: 10px;
-    font-size: 1.4em;
-    position: relative;
-    /*	相对定位，相对于自己以前的位置而言*/
-    top: 3px;
-    /*	元素从上向下移动3像素*/
-    color: #DB2519
-}
-.new-pt .item samp {
-    color: #333;
-    float: right;
-    position: relative;
-    /*	相对定位，相对于自己以前的位置而言*/
-    top: 3px;
-    /*	元素从上向下移动3像素*/
-}
-/*
-.new-pop{
-	background: url("images/pop.svg") no-repeat;
-	width: 20px;
-	height: 20px;
-	display: inline-block;
-align-items: 
-}
-.new-pt p{
-	display: inline-block;
-	height: 100%;
-	line-height: 0px
-}
-*/
-.sliderbox {
+    display: inline-block;
     width: 100%;
+    text-align: center;
+}
+.nb .l h3 a:hover {
+    text-decoration: underline;
+    color: #00619F;
+}
+.nb .l p {}
+.nb .r p {
+    color: #666;
+}
+h1, h2, h3, h4, h5, h6 {
+    margin: 0.5em 0;
+}
+.nb .r {
+    /*    background-color: palevioletred;*/
+    width: 58%;
+    margin-left: 2%;
+}
+.hot_news {
+    border-bottom: dashed 1px #ddd;
+}
+.list_news {
+    padding-left: 0;
+}
+.list_news li {
+    line-height: 2.5em;
+    list-style: none;
+}
+.list_news li a {
+    color: #666;
+    font-size: 15px;
+    text-decoration: none;
+}
+.list_news li a:hover {
+    color: crimson;
+}
+.list_news span {
+    float: right;
+    color: #666;
+}
+.list_news i {
+    color: crimson;
+    padding-right: 0.5em;
+}
+.rd-news-box {
+    height: 503px;
+    width: 100%;
+    clear: left;
     background-image: url("images/bg.jpg");
-    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 50px 0;
+    box-sizing: border-box;
+}
+.rd-news {
+    width: 1140px;
+    height: 100%;
+    background-color: rgba(255, 255, 255, .5);
+    margin: 0 auto;
+}
+.xz-item-ber {
+    width: 100%;
+    height: 47px;
+}
+.xz-item-ber .item {
+    height: 100%;
+    width: 25%;
+    float: left;
+    background-color: white;
+    text-align: center;
+    font-size: 22px;
+    line-height: 47px;
+}
+.active {
+    background-color: #0099CC !important;
+    color: aliceblue;
+}
+.rd-item-box {
+    height: 288px;
+    width: 1076px;
+    margin: 34px auto;
+}
+.rd-new-item {
+    height: 33.33%;
+    width: 33.33%;
+    padding: 10px;
+    box-sizing: border-box;
+    float: left;
+}
+.date {
+    background-image: url("./images/date.png");
+    float: left;
+    height: 100%;
+    width: 80px;
+    background-size: cover;
+    padding-top: 17px;
+    box-sizing: border-box;
+}
+.date p {
+    margin: 5px 0;
+    width: 100%;
+    text-align: center;
+}
+.rd-new-item > p {
+    width: clac(100% - 90px);
+    height: 100%;
+    margin: 0;
+    padding: 10px
+}
+.img_group {
+    margin: 40px auto;
+    background-color: rgba(31, 172, 170, 0.55);
+}
+.img_group .l {
+    width: 33%;
+}
+.img_group .l div {
+    height: 150px;
     background-position: center center;
     background-size: cover;
-    margin-top: 10px;
-    padding: 40px 0;
+    position: relative;
 }
-.sliderbox .news_group {}
-.sliderbox .news_group .slider-column {}
-.sliderbox .news_group .slider-column a {
+.img_group .l div:nth-child(1) {
+    background-image: url("images/xsfc.jpg");
+    margin-bottom: 7px;
+}
+.img_group .l div:nth-child(2) {
+    background-image: url("images/mingshi.jpg");
+}
+.img_group .c {
+    width: 33%;
+    height: 307px;
+    margin: 0 0.5%;
+    background-image: url("images/xiaoyuan.jpg");
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+	
+}
+.img_group .c  samp{
+top: 260px;
+	}
+.img_group .r {
+    width: 33%;
+}
+.img_group .r div {
+    height: 150px;
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+}
+.img_group .r div:nth-child(1) {
+    background-image: url("images/xsfc.jpg");
+    margin-bottom: 7px;
+}
+.img_group .r div:nth-child(2) {
+    background-image: url("images/quwei.jpg");
+}
+.img_group samp {
     display: inline-block;
-    line-height:  40px;
-    width: 25%;
-    background-color: white;
-	font-size:20px;
-	text-align: center;
-}
-.sliderbox .news_group .slider-column .active{
-	background-color: #007bff;
-	color: white;
-}
-.sliderbox .news_group .slider-column a:hover{
-    text-decoration: none;
-}
-.sliderbox .news_group .slider-content {
-	padding: 40px 40px 0 40px;
-}
-.slider-content ul{}
-.slider-content ul>li{
-/*	background-color: aqua;*/
-	width: 33.333%;
-	float: left;
-	margin-bottom: 20px;
-	
-}
-.news_group {
-    height: 410px;
-    background-color: rgba(255, 255, 255, 0.5)
-}
-.rili {
-	background-color: white;
-	width: 66px;
-	height: 80px;
-	display: inline-block;
-	border-top: solid #007bff;
-	border-radius: 10px;
-	margin-right: 10px;
-	
-}
-.slider-content a{
-	color: white;
-	font-size: 16px;
-	display: inline-block;
-	width: 75%;
-}
-.slider-content a:hover{
-	text-decoration: none;
-	text-shadow: 1px 1px 2px #000;
-	
-}
-.rili>span{
-	width: 50%;
-	display: inline-block;
-}
-.rili>span i{
-	display: inline-block;
-	background-color:#007bff;
-	width: 3px;
-	height: 8px;
-	position: relative;
-	top: -12px;
-	left: 16px;
-
-}
-
-.rili_shuzi {
-/*	background-color: aquamarine;*/
-	width: 100%;
-	text-align: center;
-	position: relative;
-	top:-5px;
-}
-.rili_shuzi b:nth-child(1){	}
-.rili_shuzi b:nth-child(3){
-	font-size: 30px;
-	font-weight: 500;
-	color: #007bff;
+    width: 100px;
+    line-height: 35px;
+    background-color: rgba(232, 188, 5, 0.69);
+    text-align: center;
+    color: white;
+    position:absolute ;
+    top: 105px;
 }
